2010-10-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Allow relative path to genders file with -F and/or
	  PDSH_GENDERS_FILE.

2010-10-25  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c :
	  Pass remote argv to ssh command as it was recieved in pdsh
	  instead of collapsing all arguments into a single command.

2010-10-22  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.23.

2010-10-21  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec :
	  Add tests to pdsh RPM build.

	* tests/t1001-genders.sh : Add more tests.

	* tests/t0005-rcmd_type-and-user.sh : Added.

	* tests/t0003-wcoll.sh :
	  Add tests for regex(/), hostfile(^), and exclusion(-) 
	  syntax for -w (and -x).

	* src/pdsh/opt.c :
	  Initial regex and wcoll file support for -w and -x.

	* src/pdsh/wcoll.c :
	  Allow '-' to mean stdin for read_wcoll().

	* src/common/split.c :
	  Allow multiple sets of brackets in list_split as was done
	  for hostlist.c.

2010-10-19  Mark Grondona <mgrondona@llnl.gov>

	* Makefile.am, configure.ac, tests/* :
	  Add new pdsh testsuite based on the test-lib.sh from Git.
	  See tests/README for more information.

	* src/pdsh/main.c :
	  Allow PDSH_MODULE_DIR to override pdsh_module_dir iff pdsh
	  is not running as root and isn't running setuid. This will be
	  used mostly for testing purposes.

	* src/modules/slurm.c :
	  Only target running jobs with -j all (not completed for example)

	* Makefile.am, configure.ac, testsuite/* :
	  Remove dejagnu based testsuite.

2010-10-04  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c, src/pdsh/privsep.h :
	  Switch to rresvport_af.

	* src/pdsh/mod.c :
	  Fix reference of uninitialized modules, especially during
	  options processing.

2010-09-29  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_exec.m4 :
	  Fix references to SSH in AC_EXEC

	* scripts/dshbak :
	  Fix googlecode issue 5 reported by Mattias Slabanja,
	  where dshbak was failing to coalesce differently zero-padded